video 24 done styling also

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -141,6 +141,7 @@ ul.order
     span.count
       position relative
       overflow hidden
+      word-spacing: 10px
       float left // only works if it's floated?!
       span
         display inline-block
